--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,6 +1,7 @@
 /* Base typographique à être héritée */
 html {
 	font-family: 'Noto Sans JP', sans-serif;
+	font-size: 20px; 
 	line-height: 1.5625;
 }
 
@@ -18,19 +19,17 @@ h1 {
 	line-height: 1.1em;		
 }
 
-h2, h4 {
-	font-size: 26px;
-	line-height: 1.5625;
+h2 {
+	font-size: 50px;
+	line-height: 1.2em;
 }
 
 h3 { 
-	font-size: 20px;
+	font-size: 26px;
 }
 
-h2 {
-	border-bottom: 1px solid rgba(0,0,0,.2);
-	padding-bottom: 10px;
-	font-size: 50px;
+h4 {
+	font-size: inherit;
 }
 
 /*body>div>h2 {
