--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,69 +1,78 @@
 /* 
 Palette de couleurs
 
-	#228B22 vert des gros titres
-	rgba(15, 235, 44, 0.1); vert pâle, couleur de fond
-    rgba(15, 235, 44, 0.3); bouton hover
-    rgb(2, 2, 2); box-shadow noir  
+#228B22 vert des gros titres
+rgba(15, 235, 44, 0.1); vert pâle, couleur de fond
+rgba(15, 235, 44, 0.3); bouton hover
+rgb(2, 2, 2); box-shadow noir  
 
 Échelle rythmique
-    6px
-    12px
-    20px
-    30px
-    80px
+6px
+12px
+20px
+30px
+80px
 
 Échelle typographique
 
-    'El Messiri', sans-serif
-    line-height de base = 1.5625
-    font-family: 'Noto Sans JP', sans-serif; => pour les titres
-    
-    16px
-    20px
-    26px
-    50px
-    80px
+'El Messiri', sans-serif
+line-height de base = 1.5625
+font-family: 'Noto Sans JP', sans-serif; => pour les titres
 
-	*/
+16px
+20px
+26px
+50px
+80px
+
+*/
 
 /* Règles génériques ----------------------- */
 
 /* Rétablir les marges 
-    intérieures & extérieures sur tout */
-    * {
-        margin: 0;
-        padding: 0;
-    }
-  
-    header {
-        margin-bottom: 30px;
-    }
+intérieures & extérieures sur tout */
+* {
+	margin: 0;
+	padding: 0;
+}
 
-    body {
-        padding: 20px;
-    }
+header {
+	margin-bottom: 30px;
+}
 
-    /* Rythme vertical général */
-    * + :is(p, h1, h2, img, button, .grille) {
-        margin-top: 20px;
-    }
+body {
+	padding: 20px;
+}
 
-    /*Pour bien séparer les grandes sections et l'en-tête*/
-    body>*+*,
-    header > * + * {
-		margin-top: 80px;
-	}
+/* Rythme vertical général */
+* + :is(p, h1, h2, img, button, .grille) {
+	margin-top: 20px;
+}
+
+/*Pour bien séparer les grandes sections et l'en-tête*/
+body>*+*,
+header > * + * {
+	margin-top: 80px;
+}
 
 
 
 /* Style pour les images */
 img {
-    display: block;
-    max-width: 100%; 
-    overflow: hidden;
-    object-fit: cover;
-} 
+	display: block;
+	max-width: 100%; 
+	overflow: hidden;
+	object-fit: cover;
+}
+
+img.focus-bas {
+	object-position: bottom;
+}
+
+img[src*="resto1"] {
+	object-position: 0px -35px;
+}
+
 
 
 
@@ -74,127 +83,167 @@ img {
 
 /* Structure générique des sections */
 section > header {
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgba(0,0,0,.2);
+	padding-bottom: 10px;
+	border-bottom: 1px solid rgba(0,0,0,.2);
 }
 
 
 
 .imagePrincipale {
-    width: 100%;
-    max-height: 500px;
+	width: 100%;
+	max-height: 500px;
 }
 
 /*Conteneur de grille ------------*/
 .grille {
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    gap: 20px;
-}
-
-.grille > * {
-    flex: 1 400px;
-    min-width: 20ch;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+	column-gap: 20px;
+	row-gap: 60px;
 }
 
 .grille h2 {
-    font-size: 30px;
+	font-size: 30px;
 }
 
 .grille img {
-    width: 100%;
-    max-height: 600px;
+	width: 100%;
+	max-height: 300px;
 }
+
+
+.deux-panneaux {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+}
+
+.deux-panneaux > * {
+	flex-basis: calc((100% / 2) - 20px);
+	flex-grow: 1;
+}
+
+.deux-panneaux > h2 {
+	flex-basis: 100%;
+}
+
+.deux-panneaux .panneau-texte {
+	align-self: center;
+}
+
+.deux-panneaux picture,
+.deux-panneaux img {
+	min-height: 100%;
+}
+
+
+/* Encadré / CTA à deux panneaux */
+.encadre {
+	padding: 40px;
+}
+
+.encadre > .contenu {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+	
+	max-width: 100ch;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.encadre > .contenu > * {
+	flex-basis: calc((100% / 2) - 20px);
+	flex-grow: 1;
+	
+	min-width: 30ch;
+}
+
+.encadre img {
+	min-height: 100%;
+}
+
 
 .botanique-container {
-    display: flex;
-    background-color: rgba(15, 235, 44, 0.1);
-    padding-top: 30px;
-    padding-bottom: 30px;
+	display: flex;
+	
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 
-.imgBotanique {
-    max-width: 600px;
-    object-fit: contain;
-    margin: 30px;
-}
+/*.imgBotanique {
+	max-width: 600px;
+	object-fit: contain;
+	margin: 30px;
+}*/
 
 .txtBotanique {
-    align-self: center;
-    margin-left: 30px;
-    margin-right: auto;
+	align-self: center;
+	margin-left: 30px;
+	margin-right: auto;
 }
 
 #site-search { 
-    width: 100px;
+	width: 100px;
 }
 
-.txtBotanique p {  
-    max-width: 50ch;
-    text-align: justify;
-}
-
-.txtBotanique h2 {
-    margin-right: 80px;
-}
 
 .imgfranchise {
-    display: block;
-    width: 100%;
-    max-width: 600px;
-    object-fit: cover;
-    float: right;
-    margin: 30px;
-    overflow: hidden;
-    padding: 20px;
+	display: block;
+	width: 100%;
+	max-width: 600px;
+	object-fit: cover;
+	float: right;
+	margin: 30px;
+	overflow: hidden;
+	padding: 20px;
 }
 
 .franchise-container {
-    margin-top: 40px; 
-    display: flex;
-    background-color: rgba(15, 235, 44, 0.1);
-    padding-top: 30px;
-    padding-bottom: 30px;
+	margin-top: 40px; 
+	display: flex;
+	background-color: rgba(15, 235, 44, 0.1);
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 
 .txtfranchise {
-    float: left;
-    align-self: center;
-    margin-left: 30px;
+	float: left;
+	align-self: center;
+	margin-left: 30px;
 }
 
-    
+
 /*----Navigation principal*/
 .logo {
-    max-width: 80px;
-    height: auto;
+	max-width: 80px;
+	height: auto;
 }    
 
 nav {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    align-items: center;
+	display: grid;
+	grid-template-columns: 1fr auto 1fr;
+	align-items: center;
 }
 
 .navigation-principale {
-    grid-column: 2;
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	grid-column: 2;
+	
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .navigation-principale > * {
-    flex-grow: 1;
+	flex-grow: 1;
 }
 
 .selection-langue {
-    justify-self: end;
+	justify-self: end;
 }
 
 .selection-langue > * {
-    display: inline-block;
+	display: inline-block;
 }
 
 
@@ -202,476 +251,449 @@ nav {
 
 
 .menu ul ul {
-    display:none;
-    position:absolute;
-    padding:0;
-    background-color: white;
-    margin-left: -10px;
+	display:none;
+	position:absolute;
+	padding:0;
+	background-color: white;
+	margin-left: -10px;
 }
 
 .menu ul ul li {
-    float:none;
-    margin: 0px 11px;
+	float:none;
+	margin: 0px 11px;
 }
 
 .menu>ul>li>ul a {
-    display: block; 
-    padding: 0;
-    margin: 0;
-    line-height: 1.3em;
-    color: inherit;
-    transition-duration: 100ms;
+	display: block; 
+	padding: 0;
+	margin: 0;
+	line-height: 1.3em;
+	color: inherit;
+	transition-duration: 100ms;
 }
 
 .menu ul li:hover ul {
-    display: block; 
+	display: block; 
 }
 
 .menu a {
-    line-height: 1.5em;
-    display: block;
-    margin: 10px 2px;
-    padding: 6px 12px;
-    color: inherit;
-    text-decoration: none;
-    transition-duration: 100ms;
+	line-height: 1.5em;
+	display: block;
+	margin: 10px 2px;
+	padding: 6px 12px;
+	color: inherit;
+	text-decoration: none;
+	transition-duration: 100ms;
 }
 
 
 
 .menu a:hover {
-    background-color: #228B22;
-    color: white;
+	background-color: #228B22;
+	color: white;
 }
 
 .menu_droite {
-    margin-left: auto; 
-    display: flex;
+	margin-left: auto; 
+	display: flex;
 }
 
 /*----Navigation secondaire, dans le footer-------------*/
 .menu_secondaire {
-    align-items: center;
-    margin: auto;
-    display: flex;
+	align-items: center;
+	margin: auto;
+	display: flex;
 }
 /*------------menu burger--------------*/
 .label-toggle {
-    margin: 0 40px 0 0;
-    font-size: 26px;
-    line-height: 70px;
-    display: none;
-    width: 26px;
-    float: left;
-    z-index: 2;
-    position: relative;
+	margin: 0 40px 0 0;
+	font-size: 26px;
+	line-height: 70px;
+	display: none;
+	width: 26px;
+	float: left;
+	z-index: 2;
+	position: relative;
 }
 
 #toggle {
-    display: none;
+	display: none;
 }
 
 .nav>label{
-    display: none;
+	display: none;
 }
 
 /* -----------------lien-------------------*/
 
 .bouton-reserve {
-    padding: 6px;
-    background-color: #228B22;
-    text-decoration: none;
-    cursor: pointer;
-    color: white;
-    font-size: 16px;
-    text-align: center;
-    max-height: 40px;
-    outline: none;
-    border: none;
-    border-radius: 12px;
-    box-shadow: 0 5px #999;
+	padding: 6px;
+	background-color: #228B22;
+	text-decoration: none;
+	cursor: pointer;
+	color: white;
+	font-size: 16px;
+	text-align: center;
+	max-height: 40px;
+	outline: none;
+	border: none;
+	border-radius: 12px;
+	box-shadow: 0 5px #999;
 }
 
 .bouton-reserve:hover {
-    background-color: rgba(15, 235, 44, 0.3);
-    box-shadow: 0px 5px rgb(2, 2, 2);
-    color:#000000;
+	background-color: rgba(15, 235, 44, 0.3);
+	box-shadow: 0px 5px rgb(2, 2, 2);
+	color:#000000;
 }
-    
+
 .bouton-reserve:active {
-    background-color: #3e8e41;
-    box-shadow: 0px 5px rgb(2, 2, 2);
-    transform: translateY(4px);
+	background-color: #3e8e41;
+	box-shadow: 0px 5px rgb(2, 2, 2);
+	transform: translateY(4px);
 }
 
 #bouton-site, #bouton-promo { 
-    margin-left: 20px;
+	margin-left: 20px;
 }
 
 /*-------------- Effets-----------------*/
-    
-.zoom {
-    transition: transform .5s;
-    max-width: 50%;
-    float: left;
-}
-    
-.zoom:hover {
-    transform: scale(1.05); 
-}
-
-.lien {
-    transition: transform .5s;
-}
-
-.lien:hover {
-    transform: scale(1.05);
-    cursor: pointer; 
-}
 
 label {
-    display: block;
-    font-size:20px;
+	display: block;
+	font-size:20px;
 }
 
 input:hover {
-    box-shadow: 0px 5px rgb(2, 2, 2);
-    color:#000000;
+	box-shadow: 0px 5px rgb(2, 2, 2);
+	color:#000000;
 }
 
 /*-------------- Recherche-----------------*/
 
 input {
-    min-height: 30px;
-    background-color:  rgba(15, 235, 44, 0.3);
-    padding-top: 6px;
-    padding-bottom: 6px;
-    border-radius: 12px;
-    color: black;
-    font-size: 16px;
-    text-align: center;
-    outline: none;
-    border: none;
-    border-radius: 12px;
-    box-shadow: 0 5px #999;
-    margin-left: 20px; 
+	min-height: 30px;
+	background-color:  rgba(15, 235, 44, 0.3);
+	padding-top: 6px;
+	padding-bottom: 6px;
+	border-radius: 12px;
+	color: black;
+	font-size: 16px;
+	text-align: center;
+	outline: none;
+	border: none;
+	border-radius: 12px;
+	box-shadow: 0 5px #999;
+	margin-left: 20px; 
 }
 
 /*----------------footer----------------*/
 
 footer {
-    margin-top: 80px;
-    padding-left: 12px;
-    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.55);
+	margin-top: 80px;
+	padding-left: 12px;
+	box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.55);
 }
 
 .contenu-footer {
-    width: auto;
-    display:flex;
-    justify-content:space-around;
-    align-items: flex-start;
-    font-size: 13px;
-    letter-spacing: -1px;
-    line-height: 1rem;
+	width: auto;
+	display:flex;
+	justify-content:space-around;
+	align-items: flex-start;
+	font-size: 13px;
+	letter-spacing: -1px;
+	line-height: 1rem;
 }
 
 .adresse{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin: 20px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	margin: 20px;
 }
 
 .rue {
-    width: 30%;
+	width: 30%;
 }
 
 .img_logo {
-    width: 30%;
+	width: 30%;
 }
 
 .infolettre {
-    width: 30%;
+	width: 30%;
 }
 
 .infolettre{
-    display: block;
+	display: block;
 }
 
 .logo-footer {
-    width: 80px;
-    height: 80px;
-    margin-left: auto; 
-    margin-right: auto;
+	width: 80px;
+	height: 80px;
+	margin-left: auto; 
+	margin-right: auto;
 }
 
 
 /* Adaptation de la maquette pour les appareils suivants */
 @media (min-width: 320px) and (max-width: 500px) {
-    /*Téléphone*/
-    html {
-        font-size: 13px;
-    }
-
-    body>*+* {
+	/*Téléphone*/
+	html {
+		font-size: 13px;
+	}
+	
+	body>*+* {
 		margin-top: 40px;
 	}
-
-    .navigation {
-        font-size: small;
-    }
-    .menu a {
-        margin: 0;
-    }
-
-    .menu_droite {
-        margin-left: 10px;
-    }
-
-    h1 {
-        font-size: xx-large;
-    }
-
-    .grille h2 {
-        font-size: large;
-    }
-
-    .txtBotanique p { 
-        font-size: small;
-
-    }
-
-    .txtBotanique h2, p { 
-        margin-right: 5px; 
-        font-size: 15px;
-    }
-
-    .botanique-container {
-        display: block; 
-        background-color: rgba(15, 235, 44, 0.1);
-        padding-top: 30px;
-        padding-bottom: 30px;
-    }
-
-    .imgBotanique {
-        margin: 20px auto auto auto;
-    }
-
-    input { 
-        font-size: smaller;
-    }
-
-    .franchise-container {
-        margin-top: 0;
-    }
-
-    #site-search { 
-        width: 60px;
-    }
-
-    #bouton-site, #bouton-promo { 
-        margin-left: 20px;
-    }
-
-    .adresse {
-        display: flex;
-        align-items: center;
-        text-align: center;
-        margin: 20px;
-        font-size: x-small;
-    }
-
-    label {
-        font-size: 12px;
-    }
-
-    .adresse * {
-        font-size: x-small;
-    }
-
-    .logo-footer {
-        width: 40px;
-        height: 40px;
-        margin-left: auto; 
-        margin-right: auto;
-    }
-
-    .mail-search {
-        font-size: 10px;
-    }
-    
-    .mail-search {
-        margin-left: 0;
-        width: 100px;
-    }
-
-    #bouton-courriel {
-        width: 100px;
-    }
+	
+	.navigation {
+		font-size: small;
+	}
+	.menu a {
+		margin: 0;
+	}
+	
+	.menu_droite {
+		margin-left: 10px;
+	}
+	
+	h1 {
+		font-size: xx-large;
+	}
+	
+	.grille h2 {
+		font-size: large;
+	}
+	
+	.txtBotanique p { 
+		font-size: small;
+		
+	}
+	
+	.txtBotanique h2, p { 
+		margin-right: 5px; 
+		font-size: 15px;
+	}
+	
+	.botanique-container {
+		display: block; 
+		background-color: rgba(15, 235, 44, 0.1);
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
+	
+	input { 
+		font-size: smaller;
+	}
+	
+	#site-search { 
+		width: 60px;
+	}
+	
+	#bouton-site, #bouton-promo { 
+		margin-left: 20px;
+	}
+	
+	.adresse {
+		display: flex;
+		align-items: center;
+		text-align: center;
+		margin: 20px;
+		font-size: x-small;
+	}
+	
+	label {
+		font-size: 12px;
+	}
+	
+	.adresse * {
+		font-size: x-small;
+	}
+	
+	.logo-footer {
+		width: 40px;
+		height: 40px;
+		margin-left: auto; 
+		margin-right: auto;
+	}
+	
+	.mail-search {
+		font-size: 10px;
+	}
+	
+	.mail-search {
+		margin-left: 0;
+		width: 100px;
+	}
+	
+	#bouton-courriel {
+		width: 100px;
+	}
 }
 
 @media (min-width: 501px) and (max-width: 1150px) {
-    /*Tablette*/
-    html {
-        font-size: 12px;
-    }
-
-    .logo {
-        max-width: 80px;
-        height: auto;
-    }
-
-    .navigation {
-        font-size: small;
-    }
-
-    h1 {
-        font-size: xx-large;
-    }
-
-    .txtBotanique p { 
-        font-size: larger;
-    }
-
-    .txtBotanique h2, p { 
-        margin-right: 5px;
-        font-size: 15px;
-    }
-
-    .botanique-container {
-        display: flex;
-        background-color: rgba(15, 235, 44, 0.1);
-        padding-top: 30px;
-        padding-bottom: 30px;
-    }
-
-    .adresse * {
-        font-size: small;
-    }
-    
+	/*Tablette*/
+	html {
+		font-size: 12px;
+	}
+	
+	.logo {
+		max-width: 80px;
+		height: auto;
+	}
+	
+	.navigation {
+		font-size: small;
+	}
+	
+	h1 {
+		font-size: xx-large;
+	}
+	
+	.txtBotanique p { 
+		font-size: larger;
+	}
+	
+	.txtBotanique h2, p { 
+		margin-right: 5px;
+		font-size: 15px;
+	}
+	
+	.botanique-container {
+		display: flex;
+		background-color: rgba(15, 235, 44, 0.1);
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
+	
+	.adresse * {
+		font-size: small;
+	}
+	
 }
 
 /*-------------Menu secondaire dans le footer en 2 colonnes--------*/
 @media (min-width: 320px) and (max-width: 461px) {
-    footer ul {  
-        display: flex;
-        flex-direction: column;
-    }
+	footer ul {  
+		display: flex;
+		flex-direction: column;
+	}
 }
 
 /*----------Menu burger seulement avec-------------- */
 @media (min-width: 320px) and (max-width: 980px) {
-
-    .menu ul ul {
-        display:block;
-        position:relative;
-        padding:0;
-        
-        background-color: white;
-        margin-left: 10px;
-    }
-
-    
-/*---------------menu burger---------------*/
-    header {  
-        margin-top: 50px; 
-    }
-
-    header ul {  
-        display: flex;
-        flex-direction: column;
-    }
-
-    .nav {
-        position: fixed;
-        top: 0;
-        background-color: white;
-        width: calc(100% - 5px);
-        z-index: 1;
-    }
-
-    .navigation { 
-        flex-direction: column-reverse;
-    }
-
-    .menu_droite { 
-        margin-left: auto;
-    }
-
-    .menu_droite ul { 
-        flex-direction: row;
-    }
-
-    .label-toggle {
-        display: block;
-        cursor: pointer;
-    }
-    .menu-burger {
-        width: 100%;
-        display: none; 
-        position: fixed;
-        background-color: white;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        z-index: 1;
-        align-items: center;
-        justify-content: center;
-    }
-    .menu-burger a {
-        display: block;
-        border-bottom: 1px solid #EAEAEB;
-        margin: 0;
-     
-    }
-    #toggle:checked + .menu-burger {
-        display: flex;
-    }
-
-    .logo{
-        display: none;
-    }
-    .nav>label{
-        display: block;
-    }
+	
+	.menu ul ul {
+		display:block;
+		position:relative;
+		padding:0;
+		
+		background-color: white;
+		margin-left: 10px;
+	}
+	
+	
+	/*---------------menu burger---------------*/
+	header {  
+		margin-top: 50px; 
+	}
+	
+	header ul {  
+		display: flex;
+		flex-direction: column;
+	}
+	
+	.nav {
+		position: fixed;
+		top: 0;
+		background-color: white;
+		width: calc(100% - 5px);
+		z-index: 1;
+	}
+	
+	.navigation { 
+		flex-direction: column-reverse;
+	}
+	
+	.menu_droite { 
+		margin-left: auto;
+	}
+	
+	.menu_droite ul { 
+		flex-direction: row;
+	}
+	
+	.label-toggle {
+		display: block;
+		cursor: pointer;
+	}
+	.menu-burger {
+		width: 100%;
+		display: none; 
+		position: fixed;
+		background-color: white;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		z-index: 1;
+		align-items: center;
+		justify-content: center;
+	}
+	.menu-burger a {
+		display: block;
+		border-bottom: 1px solid #EAEAEB;
+		margin: 0;
+		
+	}
+	#toggle:checked + .menu-burger {
+		display: flex;
+	}
+	
+	.logo{
+		display: none;
+	}
+	.nav>label{
+		display: block;
+	}
 }
 
 /*------------------Téléphone et Tablette---------------*/
 @media (min-width: 320px) and (max-width: 1150px) {
-    .menu ul {  
-        display: flex;
-    }
-
-    h2, h3, h4 { 
-        font-size: larger; 
-    }
-
-    .txtBotanique { 
-        margin-left: 5px;
-    }
-
-    .bouton-reserve {
-        font-size: x-small;
-    }
-
-    .adresse * {
-        font-size: small;
-    }
+	.menu ul {  
+		display: flex;
+	}
+	
+	h2, h3, h4 { 
+		font-size: larger; 
+	}
+	
+	.txtBotanique { 
+		margin-left: 5px;
+	}
+	
+	.bouton-reserve {
+		font-size: x-small;
+	}
+	
+	.adresse * {
+		font-size: small;
+	}
 }
 
 @media (min-width: 981px) and (max-width: 1001px) {
-    .navigation ul ul li {
-        font-size: 12px;
-    }
+	.navigation ul ul li {
+		font-size: 12px;
+	}
 }
 
 @media (min-width: 1151px) and (max-width: 1260px) {
-    .navigation {
-        font-size: 17px;
-    }
-
-    .navigation ul ul li {
-        font-size: 15px;
-    }
+	.navigation {
+		font-size: 17px;
+	}
+	
+	.navigation ul ul li {
+		font-size: 15px;
+	}
 }
