--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -3,7 +3,10 @@ li {
 	list-style-type: none;
 }
 
-
+body {
+	background-image: linear-gradient(135deg, rgba(15, 235, 44, 0.08), rgba(0,0,0,0) 30%);
+	background-attachment: fixed;
+}
 
 h1,
 h2,
@@ -12,8 +15,59 @@ h4 {
 	color: #228B22;
 }
 
-
-/* Encadrés et CTA */
+input,
 .encadre {
 	background-color: rgba(15, 235, 44, 0.1);
+}
+
+input {
+	box-shadow: 
+		1px 1px 2px 0px rgba(0,0,0,.2),
+		1px 1px 3px 0px rgba(0,0,0,.2);
+}
+
+input:focus {
+	background-color: hsl(308, 86%, 95%);
+	outline: 0;
+	box-shadow: 
+		1px 1px 4px 1px hsla(308, 86%, 95%, .5),
+		1px 1px 3px 0px rgba(0,0,0,.2);
+}
+
+button {
+	color: white;
+	background-color: #228B22;
+	box-shadow: 
+		1px 1px 2px 0px rgba(0,0,0,.2),
+		1px 1px 3px 0px rgba(0,0,0,.2);
+	
+	cursor: pointer;
+
+	transition-property: transform background-color;
+	transition-duration: 120ms;
+}
+
+button:hover,
+button:focus {
+	background-color: rgba(15, 235, 44, 0.3);
+	color:#000000;
+}
+
+button:focus {
+	outline: 2px dotted #228B22;
+	box-shadow: 
+		1px 1px 4px 1px hsla(308, 86%, 95%, .5),
+		1px 1px 3px 0px rgba(0,0,0,.2);
+}
+
+button:active {
+	transform: translateY(4px);
+}
+
+
+/* Bordure de séparation de certains éléments d'en-tête */
+section > header,
+.promo h2 {
+	padding-bottom: 10px;
+	border-bottom: 1px solid rgba(0,0,0,.2);
 }
