--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -41,7 +41,10 @@ h5 {
 	font-size: 16px;
 }
 
-
+input,
+button {
+	font-size: inherit;
+}
 
 /* Navigation principale */
 .navigation-principale li {
