--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,13 +45,14 @@ body {
 }
 
 /* Rythme vertical général */
-* + :is(p, h1, h2, img, button, input, .grille) {
+* + :is(p, h2, img, a, button, input, .grille) {
 	margin-top: 20px;
 }
 
 /*Pour bien séparer les grandes sections et l'en-tête*/
-body>*+*,
-header > * + * {
+body> * + *,
+header > * + *,
+* + h1 {
 	margin-top: 80px;
 }
 
@@ -80,6 +81,24 @@ img[src*="resto1"] {
 .imagePrincipale {
 	width: 100%;
 	max-height: 500px;
+}
+
+
+/*-------------- Éléments de formulaires et liens -----------------*/
+:not(p) > a {
+	display: inline-block;
+}
+
+input,
+button,
+.cta {
+	padding: 10px;
+	border-radius: 4px;
+	border: none;
+}
+
+input + button {
+	margin-left: 8px;
 }
 
 
@@ -136,19 +155,12 @@ img[src*="resto1"] {
 }
 
 .encadre > .contenu {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 20px;
-	
 	max-width: 100ch;
 	margin-right: auto;
 	margin-left: auto;
 }
 
 .encadre > .contenu > * {
-	flex-basis: calc((100% / 2) - 20px);
-	flex-grow: 1;
-	
 	min-width: 30ch;
 }
 
@@ -164,10 +176,6 @@ img[src*="resto1"] {
 	border-bottom: 1px solid rgba(0,0,0,.2);
 }
 
-.promo input {
-	margin-right: 20px;
-}
-
 
 /*----Navigation principale */
 .logo {
@@ -175,7 +183,7 @@ img[src*="resto1"] {
 	height: auto;
 }    
 
-nav {
+nav.navigation {
 	display: grid;
 	grid-template-columns: 1fr auto 1fr;
 	align-items: center;
@@ -200,8 +208,6 @@ nav {
 .selection-langue > * {
 	display: inline-block;
 }
-
-
 
 
 
@@ -232,12 +238,9 @@ nav {
 }
 
 .menu a {
-	line-height: 1.5em;
-	display: block;
-	margin: 10px 2px;
-	padding: 6px 12px;
+	padding: 6px 20px;
 	color: inherit;
-	text-decoration: none;
+	
 	transition-duration: 100ms;
 }
 
@@ -253,12 +256,8 @@ nav {
 	display: flex;
 }
 
-/*----Navigation secondaire, dans le footer-------------*/
-.menu_secondaire {
-	align-items: center;
-	margin: auto;
-	display: flex;
-}
+
+
 /*------------menu burger--------------*/
 .label-toggle {
 	margin: 0 40px 0 0;
@@ -280,61 +279,35 @@ nav {
 }
 
 
-/*-------------- Éléments de formulaires -----------------*/
 
-input,
-button {
-	padding: 10px;
-	border-radius: 4px;
-	border: none;
-}
 
 /*----------------footer----------------*/
-
 footer {
-	margin-top: 80px;
-	padding-left: 12px;
-	box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.55);
+	display: grid;
+	grid-template-columns: minmax(min-content, 30ch) auto minmax(min-content, 30ch);
+	gap: 20px;
+
+	padding: 20px;
 }
 
-.contenu-footer {
-	width: auto;
-	display:flex;
-	justify-content:space-around;
-	align-items: flex-start;
-	font-size: 13px;
-	letter-spacing: -1px;
-	line-height: 1rem;
+footer .logo {
+	max-width: 80px;
 }
 
-.adresse{
+footer nav {
+	justify-self: center;
+}
+
+/*----Navigation secondaire, dans le footer-------------*/
+.menu_secondaire {
 	display: flex;
 	align-items: center;
-	text-align: center;
-	margin: 20px;
-}
-
-.rue {
-	width: 30%;
-}
-
-.img_logo {
-	width: 30%;
 }
 
 .infolettre {
-	width: 30%;
-}
+	padding-top: 6px;
 
-.infolettre{
-	display: block;
-}
-
-.logo-footer {
-	width: 80px;
-	height: 80px;
-	margin-left: auto; 
-	margin-right: auto;
+	text-align: right;
 }
 
 
