--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,7 +1,8 @@
 /* Base typographique à être héritée */
 html {
-	font-family: 'Noto Sans JP', sans-serif;
-	font-size: 20px; 
+	font-family: "Open Sans", sans-serif;
+	font-size: 20px;
+	font-weight: 400; 
 	line-height: 1.5625;
 }
 
