--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,7 +1,19 @@
+/* Coeffecient de taille */
+:root {
+	--scale-factor: 1.414; /* Augmented fourth https://type-scale.com */
+}
+
 /* Base typographique à être héritée */
 html {
+	font-size: 1.25rem;
+}
+
+body {
 	font-family: "Open Sans", sans-serif;
-	font-size: 20px;
+	font-size: clamp(
+		1rem,
+		.6rem + 0.7vw,
+		1.414rem);
 	font-weight: 400; 
 	line-height: 1.5625;
 }
@@ -16,7 +28,10 @@ h1, h2, h3, h4, h5, h6 {
     
 	
 h1 {
-	font-size: 80px;
+	font-size: clamp(
+		1rem * var(--scale-factor) * 3,
+		.6rem * var(--scale-factor) * 3 + .7vw * var(--scale-factor) * 3,
+		1.414rem * var(--scale-factor) * 3);
 	line-height: 1.1em;
 }
 
@@ -26,12 +41,18 @@ section > header {
 }
 
 h2 {
-	font-size: 50px;
+	font-size: clamp(
+		1rem * var(--scale-factor) * 2,
+		.6rem * var(--scale-factor) * 2 + .7vw * var(--scale-factor) * 2,
+		1.414rem * var(--scale-factor) * 2);
 	line-height: 1.2em;
 }
 
 h3 { 
-	font-size: 26px;
+	font-size: clamp(
+		1rem * var(--scale-factor),
+		.6rem * var(--scale-factor) + .7vw * var(--scale-factor),
+		1.414rem * var(--scale-factor))
 }
 
 h4 {
@@ -50,9 +71,4 @@ button {
 /* Navigation principale */
 .navigation-principale li {
 	text-align: center;
-}
-
-
-p {
-	font-size: 20px;
 }
