--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,19 +1,34 @@
 /* Coeffecient de taille */
 :root {
-	--scale-factor: 1.414; /* Augmented fourth https://type-scale.com */
+	--fontSizeInitial: 1rem;
+	--fontBase: .6rem;
+	--fontGrow: .7vw;
+	--fontScale: 1.414; /* Augmented fourth https://type-scale.com */
+	
+	--fontSizeMin: (var(--fontSizeInitial) * var(--fontScaling) / var(--fontScale));
+	;
+	--fontSizeScaling: var(--fontBase) * var(--fontScaling) / var(--fontScale) + var(--fontGrow) * var(--fontScaling) / var(--fontScale);
+
+	--fontScalingMega: calc(var(--fontScale) * var(--fontScale) * var(--fontScale) * var(--fontScale) * var(--fontScale));
+	--fontScalingKilo: calc(var(--fontScale) * var(--fontScale) * var(--fontScale) * var(--fontScale));
+	--fontScalingHecto: calc(var(--fontScale) * var(--fontScale) * var(--fontScale));
+	--fontScalingDeca: calc(var(--fontScale) * var(--fontScale));
+	--fontScalingBase: var(--fontScale);
+
+
 }
 
 /* Base typographique à être héritée */
-html {
-	font-size: 1.25rem;
-}
-
 body {
+	--fontScaling: (var(--fontScalingBase));
+	--fontSizeMin: (var(--fontSizeInitial) * var(--fontScaling) / var(--fontScale));
+	--fontSizeMax: (var(--fontSizeInitial) * var(--fontScaling));
+	--fontSizeScaling: var(--fontBase) * var(--fontScaling) / var(--fontScale) + var(--fontGrow) * var(--fontScaling) / var(--fontScale);
+	--test: calc(var(--fontSizeMax));
+
 	font-family: "Open Sans", sans-serif;
-	font-size: clamp(
-		1rem,
-		.6rem + 0.7vw,
-		1.414rem);
+	font-size: clamp(var(--fontSizeMin), var(--fontSizeScaling), var(--test));
+		
 	font-weight: 400; 
 	line-height: 1.5625;
 }
@@ -29,8 +44,8 @@ h1, h2, h3, h4, h5, h6 {
 	
 h1 {
 	font-size: clamp(
-		1rem * var(--scale-factor) * 3,
-		.6rem * var(--scale-factor) * 3 + .7vw * var(--scale-factor) * 3,
+		var(--fontSizeInitial) * var(--fontScalingMega) / var(--fontScale),
+		var(--fontBase) * var(--fontScalingMega) / var(--fontScale) + v * var(--scale-factor) * 3,
 		1.414rem * var(--scale-factor) * 3);
 	line-height: 1.1em;
 }
@@ -71,4 +86,12 @@ button {
 /* Navigation principale */
 .navigation-principale li {
 	text-align: center;
+}
+
+
+
+@media (min-width: 320px) and (max-width: 1150px) {
+	:root {
+		--fontScale: 1.222;
+	}
 }
