--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,3 +1,8 @@
+/* Propriétés personnalisées :::::::: */
+:root {
+	--primary-dark: hsl(120, 70%, 20%);
+}
+
 /* Réinitialisations :::::::: */
 li {
 	list-style-type: none;
@@ -16,7 +21,7 @@ h1,
 h2,
 h3,
 h4 {
-	color: #228B22;
+	color: var(--primary-dark);
 }
 
 input,
@@ -41,7 +46,7 @@ input:focus {
 button,
 .cta {
 	color: white;
-	background-color: #228B22;
+	background-color: var(--primary-dark);
 	box-shadow: 
 		1px 1px 2px 0px rgba(0,0,0,.2),
 		1px 1px 3px 0px rgba(0,0,0,.2);
@@ -59,7 +64,7 @@ button,
 }
 
 :is(button, .cta):focus {
-	outline: 2px dotted #228B22;
+	outline: 2px dotted var(--primary-dark);
 	box-shadow: 
 		1px 1px 4px 1px hsla(308, 86%, 95%, .5),
 		1px 1px 3px 0px rgba(0,0,0,.2);
@@ -80,4 +85,11 @@ section > header,
 .promo h2 {
 	padding-bottom: 10px;
 	border-bottom: 1px solid rgba(0,0,0,.2);
+}
+
+
+/* Navigation */
+.menu a:hover {
+	background-color: var(--primary-dark);
+	color: white;
 }
