--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -43,11 +43,17 @@ h3 {
 		var(--fontSizeInitial) * var(--fontScalingDeca) / var(--fontScale),
 		var(--fontBase) * var(--fontScalingDeca) / var(--fontScale),
 		var(--fontSizeInitial) * var(--fontScalingDeca));
+	line-height: 1.1em;
 }
 
 /* Base typographique à être héritée */
 body {
 	font-family: "Open Sans", sans-serif;
+}
+
+
+footer {
+	font-size: .8em;
 }
 
 
@@ -74,9 +80,23 @@ h5 {
 input,
 button {
 	font-size: inherit;
+	line-height: inherit;
 }
 
 
+.label-toggle {
+	text-align: center;
+	line-height: 1;
+}
+
+.label-toggle > span {
+	font-size: 1em;
+}
+
+/* Aligné le texte à droite pour les encadrés avec photos à droite */
+.encadre--pair .panneau-texte {
+	text-align: right;
+}
 
 @media (min-width: 751px) and (max-width: 1150px) {
 	:root {
@@ -84,8 +104,14 @@ button {
 	}
 }
 
-@media (min-width: 320px) and (max-width: 750px) {
+@media (min-width: 501px) and (max-width: 750px) {
 	:root {
 		--fontScale: 1.250;
+	}
+}
+
+@media (max-width: 500px) {
+	:root {
+		--fontScale: 1.125;
 	}
 }
